# dev-commander

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  bootstrap.sh  pyproject.toml
.claude-plugin/: marketplace.json
docs/: README.md  commands.md  getting-started.md  lifecycle.md  workspace.md
docs/superpowers/specs/: 2026-07-22-v0.3-ci-security-design.md  2026-07-23-v0.4-publish-deploy-design.md  2026-07-23-v0.5-deploy-target-family-design.md
planning/: plan.md
plugins/dev-commander/.claude-plugin/: plugin.json
plugins/dev-commander/scripts/: bump_version.py  init_workspace.py  journal.py  next_step.py  status.py
plugins/dev-commander/skills/dc-branch/: SKILL.md
plugins/dev-commander/skills/dc-ci/: SKILL.md
plugins/dev-commander/skills/dc-core/: SKILL.md
plugins/dev-commander/skills/dc-debug/: SKILL.md
plugins/dev-commander/skills/dc-deploy/: SKILL.md
plugins/dev-commander/skills/dc-design/: SKILL.md
plugins/dev-commander/skills/dc-handoff/: SKILL.md
plugins/dev-commander/skills/dc-implement/: SKILL.md
plugins/dev-commander/skills/dc-learning/: SKILL.md
plugins/dev-commander/skills/dc-plan/: SKILL.md
plugins/dev-commander/skills/dc-publish/: SKILL.md
plugins/dev-commander/skills/dc-release/: SKILL.md
plugins/dev-commander/skills/dc-review/: SKILL.md
scripts/: verify_skills.py
tests/: test_bootstrap.py  test_dc_ci.py  test_dc_core.py  test_dc_deploy.py  test_dc_release.py  test_dc_scaffold.py  test_dc_skills.py  test_lifecycle_integration.py  test_plugin_structure.py
(+30 files in other folders)
