[project]
name = "dev-commander"
version = "0.4.1"
description = "An AI-assisted software development agent shipped as a Claude Code plugin."
authors = [
    {name = "Nick Baynham", email = "nickbaynham@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/NickBaynham/dev-commander"
Repository = "https://github.com/NickBaynham/dev-commander"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
